# edn-tracker

./: .gitignore  BACKEND_ROADMAP.md  CLAUDE.md  PROJECT_PHASES.md  SCHEMA_DESIGN.md  cdc_edn_tracker_v5.docx  components.json  index.html  package-lock.json  package.json  schema.sql  tailwind.config.js  vite.config.ts
.claude/commands/: github-issue.md
Design System/: README.md  SKILL.md  colors_and_type.css
Design System/fonts/: README.md
Design System/preview/: _preview.css  brand-icons.html  brand-logo.html  brand-voice.html  color-accent.html  color-dark.html  color-highlights.html  color-neutrals.html  color-semantic.html  component-badges.html  component-buttons.html  component-cards.html  component-controls.html  component-inputs.html  component-menu.html  spacing-radii.html  spacing-scale.html  spacing-shadows.html  type-body.html  type-display.html  type-mono.html  type-scale.html
src/: App.tsx  index.css
src-tauri/: Cargo.toml  Info.plist  tauri.conf.json
src-tauri/icons/: icon.icns
src-tauri/src/: lib.rs  main.rs  scheduler.rs
src-tauri/src/commands/: anki.rs  anki_edit.rs  anki_local.rs  anki_manage.rs  anki_media.rs  anki_stats.rs  anki_study.rs  annales.rs  calendar.rs  catalog.rs  comments.rs  diagrams.rs  errors.rs  items.rs  j_method.rs  links.rs  mod.rs  ocr.rs  pdf.rs  planning.rs  search.rs  settings.rs  tracking.rs
src-tauri/src/db/: mod.rs
src-tauri/src/ocr/: mod.rs
src/components/: AnchorCommentThread.tsx  AnkiCardCreationModal.tsx  AnkiCardEditModal.tsx  AnkiDeckStatsPanel.tsx  AnnaleCreationModal.tsx  BacklinksPanel.tsx  (+16 more)
(+85 files in other folders)
